2016-12-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed an error in the installation location for icons.
2016-12-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0.
2016-12-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/lwnetrouterd/protocol_sap.cpp' that caused
	a segfault when the LiveWire device specified in
	'AdapterIpAddress=' had fewer destination slots than specified in the
	'InputQuantity=' parameter.
	* Added a sanity check in 'src/common/config.cpp' against duplicate
	'SourceIpAddress<n>=' values.
2018-02-21 Fred Gleason <fredg@paravelsystems.com>
	* Added support for the SA command 'Snapshots'.
	* Changed the name of the Livewire router from 'Livewire Audio'
	to 'Livewire_Audio'.
2018-02-21 Fred Gleason <fredg@paravelsystems.com>
	* Changed the legend of the 'OFF' source from '*** OFF ***' to
	'--OFF--'.
2018-02-21 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'NEWS'.
	* Incremented the package version to 1.0.0.
2018-02-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in lwnetrouterd(8) that caused the 'OFF' source to
	not be advertised correctly via SA protocol.
2018-02-27 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'NEWS'.
	* Incremented the package version to 1.0.1.
2022-06-20 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked the IP address values in the default lwnetrouter(5) file.
2022-06-20 Fred Gleason <fredg@paravelsystems.com>
	* Commented the entry points for command operations in
	'src/lwnetrouterd/protocol_cunc.cpp'.
2025-06-11 Fred Gleason <fredg@paravelsystems.com>
	* Completed rough port to Qt6.
2025-06-12 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'LwrpPassword=' directive to the '[Global]' section of
	lwnetrouter.conf(5).
2025-06-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed 'no such signal' errors in lwnetrouterd(8) and lwnetdelay(1).
2025-06-12 Fred Gleason <fredg@paravelsystems.com>
	* Moved systemd control components to 'systemd/'.