@@ -27,14 +27,8 @@ endif
 SUBDIRS = $(DOCBOOK_AM_OPT) conf\
           icons\
           src\
+          systemd\
           xdg
-
-install-exec-local:	
-	mkdir -p $(DESTDIR)/usr/lib/systemd/system
-	cp lwnetrouter.service $(DESTDIR)/usr/lib/systemd/system/lwnetrouter.service
-
-uninstall-local:	
-	rm -f $(DESTDIR)/usr/lib/systemd/system/lwnetrouter.service
 
 rpm:	dist
 	cp lwnetrouter-$(VERSION).tar.gz $(HOME)/rpmbuild/SOURCES/
